# xninja

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xninja/: __init__.py  agent.py  cli.py  config.py  models.py  patches.py  permissions.py
src/xninja/bundled_agent/: agent.py  metadata.json  tau_agent_files.json
src/xninja/bundled_agent/agent/: __init__.py  agent_loop.py  criteria.py  environment.py  guards.py  model.py  prompts.py  repo_diff.py
tests/: test_agent_patches_cli.py  test_bundled_renderer.py  test_config.py  test_json_output.py  test_model_streaming.py  test_models_permissions.py  test_multifile_bundle.py
